# ArtVerse

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
NoteChain/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
NoteChain/src/note_canister/: Cargo.toml  note_canister.did
NoteChain/src/notechain_frontend/: index.html
NoteChain/src/notechain_frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx
NoteChain/src/notechain_frontend/src/components/: Navbar.tsx  NoteCard.tsx  NoteForm.tsx  NoteView.tsx
NoteChain/src/notechain_frontend/src/store/: useAuthStore.ts
declarations/note_canister/: note_canister.did.d.ts
src/artview_backend/: Cargo.toml
src/artview_frontend/: package.json
src/artview_frontend/src/: App.jsx
src/declarations/note_canister/: index.d.ts  index.js  note_canister.did.js
src/declarations/notechain_frontend/: index.d.ts  index.js
src/note_canister/: Cargo.toml
src/note_canister/src/: lib.rs
src/notechain_frontend/src/: App.tsx  declarations.d.ts  index.css  main.tsx
src/notechain_frontend/src/components/: EditNote.tsx  ErrorBoundary.tsx  Navbar.tsx  NoteCard.tsx  NoteForm.tsx  NoteList.tsx  NoteView.tsx  ToastProvider.tsx
src/notechain_frontend/src/store/: mockNoteStore.ts  simpleAuthStore.ts  useAuthStore.ts  useNoteStore.ts
