[workspace] # Add this line to define the root of a new workspace

[package]
name = "note_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "~0.10.0" # Updated to be compatible with ic-cdk's transitive dependency
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1" # Should be compatible with ic-cdk 0.12.1
serde = { version = "1.0", features = ["derive"] }
# ic-stable-structures = "0.6.0" # We'll use ic_cdk::storage for simplicity first
# sha2 = "0.10.8"
# hex = "0.4.3"

[dev-dependencies]
# tokio = { version = "1", features = ["full"] }
# ic-agent = "0.20.0"
